tests/ui/offset-of/offset-of-arg-count.stderr
error: unexpected end of macro invocation
  --> $DIR/offset-of-arg-count.rs:4:34
   |
LL |     offset_of!(NotEnoughArguments);
   |                                  ^ missing tokens in macro arguments
   |
note: while trying to match `,`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: unexpected end of macro invocation
  --> $DIR/offset-of-arg-count.rs:5:45
   |
LL |     offset_of!(NotEnoughArgumentsWithAComma, );
   |                                             ^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$fields:expr`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: no rules expected `too`
  --> $DIR/offset-of-arg-count.rs:6:34
   |
LL |     offset_of!(Container, field, too many arguments);
   |                                  ^^^ no rules expected this token in macro call
   |
   = note: while trying to match sequence end

error: unexpected token: `)`
  --> $DIR/offset-of-arg-count.rs:9:21
   |
LL |     offset_of!(S, f.);
   |                     ^

error: unexpected token: `,`
  --> $DIR/offset-of-arg-count.rs:10:21
   |
LL |     offset_of!(S, f.,);
   |                     ^

error: offset_of expects dot-separated field and variant names
  --> $DIR/offset-of-arg-count.rs:11:19
   |
LL |     offset_of!(S, f..);
   |                   ^^^

error: offset_of expects dot-separated field and variant names
  --> $DIR/offset-of-arg-count.rs:12:19
   |
LL |     offset_of!(S, f..,);
   |                   ^^^

error: aborting due to 7 previous errors

